# mmd

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/efg/: aqre.py  cfr.py  nash.py
examples/efg/aqres/: dark_hex(board_size=2,gameversion=adh)_0.05.npy  dark_hex(board_size=2,gameversion=adh)_0.1.npy  dark_hex(board_size=2,gameversion=adh)_0.2.npy  dark_hex(board_size=2,gameversion=adh)_0.5.npy  kuhn_poker_0.05.npy  kuhn_poker_0.1.npy  kuhn_poker_0.2.npy  kuhn_poker_0.5.npy  leduc_poker_0.05.npy  leduc_poker_0.1.npy  leduc_poker_0.2.npy  leduc_poker_0.5.npy  liars_dice(dice_sides=4)_0.05.npy  liars_dice(dice_sides=4)_0.1.npy  liars_dice(dice_sides=4)_0.2.npy  liars_dice(dice_sides=4)_0.5.npy
examples/h2h/: evaluate.py
examples/h2h/models/: mmd_dark_hex(board_size=3,gameversion=adh)_10m_0.pt  mmd_dark_hex(board_size=3,gameversion=adh)_10m_1.pt  mmd_dark_hex(board_size=3,gameversion=adh)_10m_2.pt  mmd_dark_hex(board_size=3,gameversion=adh)_1m_0.pt  mmd_dark_hex(board_size=3,gameversion=adh)_1m_1.pt  mmd_dark_hex(board_size=3,gameversion=adh)_1m_2.pt  mmd_phantom_ttt_10m_0.pt  mmd_phantom_ttt_10m_1.pt  mmd_phantom_ttt_10m_2.pt  mmd_phantom_ttt_1m_0.pt  mmd_phantom_ttt_1m_1.pt  mmd_phantom_ttt_1m_2.pt  ppo_dark_hex(board_size=3,gameversion=adh)_10m_0.pt  ppo_dark_hex(board_size=3,gameversion=adh)_10m_1.pt  ppo_dark_hex(board_size=3,gameversion=adh)_10m_2.pt  (+9 more)
examples/nfg/: perturbed_rps.py
mmd/: utils.py
mmd/efg/: learners.py  run.py  tree.py
mmd/h2h/: run.py
mmd/nfg/: game.py  learners.py  run.py
testing/: integration_tests.py
