[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mmd"
authors = [
    {name = "Samuel Sokota", email = "ssokota@gmail.com"},
]
description = "Code for magnetic mirror descent"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT license"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
        "gym >= 0.21.0",
        "numpy >=1.24.2",
        "matplotlib >= 3.6.3",
        "open_spiel >= 1.2",
        "pandas >= 1.5.3",
        "ray[rllib] >= 1.12.0",
        "seaborn >= 0.12.2",
        "torch >= 1.13.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["mypy >= 1.1.1", "pandas-stubs >= 1.5.3", "black >= 23.1.0"]

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.*", "open_spiel", "open_spiel.*", "pyspiel", "seaborn"]
ignore_missing_imports = true

[tool.setuptools]
packages = ["mmd"]